Initial update for angular

--- a/src/core/resources/core.less
+++ b/src/core/resources/core.less
@@ -1,1 +1,6 @@
-﻿@import "sap/cloud/core/TemplateEngine";
+﻿@import "sap/cloud/core/Base";
+@import "sap/cloud/core/TemplateEngine";
+@import "sap/sbo/ng4c/header/Header";
+@import "sap/sbo/ng4c/footer/Footer";
+@import "sap/sbo/ng4c/launchpad/Dashboard";
+@import "sap/sbo/ng4c/menu/Menu";
