i305498 JIRA: BEB-22642 Description: Add theme soluition. Add registry of controllers. Fix bugs.

--- a/src/core/resources/themes/dracula/sap/sbo/ng4c/header/Header.less
+++ b/src/core/resources/themes/dracula/sap/sbo/ng4c/header/Header.less
@@ -1,18 +1,13 @@
-﻿.sap-sbo-ng4c-menu-Menu {
-    height: 43px;
+﻿.sap-sbo-ng4c-header-Header {
     position: absolute;
-    top: 4px;
-    height: 44px;
+    top: 0px;
     left: 0;
     right: 0;
-    z-index: 3;
+    height: 50px;
     overflow: hidden;
-    -webkit-perspective: 400px;
-    box-shadow: inset 0 -0.0625em #dddddd;
-    transform: rotateX(0);
-    transform-origin: bottom center;
-    transition-property: opacity,transform;
     background: #fff;
+    border-bottom: 1px solid #cccccc;
+    box-sizing: border-box;
 
     > div {
         display: inline-block;
