--- a/src/core/resources/themes/base/sap/cloud/core/Base.less
+++ b/src/core/resources/themes/base/sap/cloud/core/Base.less
@@ -23,10 +23,25 @@
     cursor: default;
 }
 
+html {
+    width: 100%;
+    height: 100%;
+}
+
 body {
     background-color: #f2f2f2;
     color: #000000;
     font-family: Arial,Helvetica,sans-serif;
     font-size: 16px;
+    padding: 0;
+    margin: 0;
+    width: 100%;
+    height: 100%;
     -webkit-tap-highlight-color: transparent;
+    background-color: #f2f2f2;
+    background-image: -moz-linear-gradient(top,#dff2f3 0,#dcecf0 50%,#dde4eb 100%);
+    background-image: -webkit-gradient(linear,left top,left bottom,color-stop(0%,#dff2f3),color-stop(50%,#dcecf0),color-stop(100%,#dde4eb));
+    background-image: -webkit-linear-gradient(top,#dff2f3 0,#dcecf0 50%,#dde4eb 100%);
+    background-image: -ms-linear-gradient(top,#dff2f3 0,#dcecf0 50%,#dde4eb 100%);
+    background-image: linear-gradient(to bottom,#dff2f3 0,#dcecf0 50%,#dde4eb 100%);
 }
