--- a/src/core/resources/themes/dracula/library.less
+++ b/src/core/resources/themes/dracula/library.less
@@ -1,5 +1,31 @@
-﻿@import "sap/sbo/ng4c/header/Header";
+﻿/*@import "sap/sbo/ng4c/header/Header";
 @import "sap/sbo/ng4c/footer/Footer";
-@import "sap/sbo/ng4c/launchpad/Dashboard";
 @import "sap/sbo/ng4c/launchpad/Launchpad";
-@import "sap/sbo/ng4c/aside/Aside";
+@import "sap/sbo/ng4c/launchpad/aside/Aside";
+@import "sap/sbo/ng4c/launchpad/dashboard/Dashboard";
+@import "sap/sbo/ng4c/header/End";
+@import "sap/sbo/ng4c/header/Center";
+@import "sap/sbo/ng4c/header/Begin";
+@import "sap/sbo/ng4c/launchpad/aside/LightAccess";
+@import "sap/sbo/ng4c/launchpad/aside/Menu";
+@import "sap/sbo/ng4c/launchpad/aside/Modules";
+@import "sap/sbo/ng4c/launchpad/aside/MyMenu";
+@import "sap/sbo/ng4c/launchpad/aside/Tab";
+@import "sap/sbo/ng4c/launchpad/dashboard/tiles/KpiTile";*/
+
+
+
+@import "sap/sbo/ng4c/footer/Footer";
+@import "sap/sbo/ng4c/header/Begin";
+@import "sap/sbo/ng4c/header/Center";
+@import "sap/sbo/ng4c/header/End";
+@import "sap/sbo/ng4c/header/Header";
+@import "sap/sbo/ng4c/launchpad/aside/Aside";
+@import "sap/sbo/ng4c/launchpad/aside/LightAccess";
+@import "sap/sbo/ng4c/launchpad/aside/Menu";
+@import "sap/sbo/ng4c/launchpad/aside/MyMenu";
+@import "sap/sbo/ng4c/launchpad/aside/Modules";
+@import "sap/sbo/ng4c/launchpad/aside/Tab";
+@import "sap/sbo/ng4c/launchpad/dashboard/tiles/KpiTile";
+@import "sap/sbo/ng4c/launchpad/dashboard/Dashboard";
+@import "sap/sbo/ng4c/launchpad/Launchpad";
