--- a/src/core/resources/themes/dracula/sap/sbo/ng4c/launchpad/aside/Aside.less
+++ b/src/core/resources/themes/dracula/sap/sbo/ng4c/launchpad/aside/Aside.less
@@ -1,11 +1,11 @@
-﻿.sap-sbo-ng4c-aside-Aside {
+﻿.sap-sbo-ng4c-launchpad-aside-Aside {
     position: absolute;
     top: 0;
     bottom: 0;
     left: 0;
     width: 50px;
     overflow: hidden;
-    background: #000000;
-    border: 1px solid #333333;
+    background: #3d454a;
+    border: 1px solid #32373A;
     box-sizing:border-box;
 }
